# omnimate

./: README.md
Omnimate_ros1/: README.md
Omnimate_ros1/yahboom_nav/: package.xml
Omnimate_ros1/yahboom_nav/launch/: amcl.launch  move_base.launch  navigation.launch
Omnimate_ros1/yahboom_nav/maps/: map.pgm
Omnimate_ros1/yahboom_nav/param/: amcl.yaml  dwa_planner.yaml  move_base.yaml
Omnimate_ros1/yahboom_new_description/: CMakeLists.txt  package.xml
Omnimate_ros1/yahboom_new_description/launch/: gazebo.launch
Omnimate_ros1/yahboom_new_description/meshes/: back_left_wheel.STL  back_right_wheel.STL  base_link.STL  camera_link.STL  front_left_wheel.STL  front_right_wheel.STL
Omnimate_ros1/yahboom_new_description/urdf/: _l515.urdf.xacro  test_l515_camera.urdf.xacro  yahboom.urdf  yahboom.urdf.xacro
Omnimate_ros1/yahboom_slam/: CMakeLists.txt  package.xml
Omnimate_ros1/yahboom_slam/config/: costmap_common_params_pro.yaml  gmapping_params.yaml
Omnimate_ros1/yahboom_slam/launch/: yahboom_gmapping.launch
Omnimate_ros1/yahboom_slam/rviz/: yahboom_gmapping.rviz
Omnimate_ros2/omnimate_description/: CMakeLists.txt
omnimate_base/: CMakeLists.txt  package.xml
omnimate_base/config/: param.yaml
omnimate_base/src/: base_node_X3.cpp
omnimate_bringup/: package.xml  setup.cfg  setup.py
omnimate_bringup/launch/: omnimate.launch.py
omnimate_bringup/omnimate_bringup/: calibrate_angular_X3.py  calibrate_linear_X3.py
omnimate_ctrl/: package.xml  setup.cfg  setup.py
omnimate_ctrl/omnimate_ctrl/: omnimate_joy_X3.py  omnimate_keyboard.py
omnimate_description/: CMakeLists.txt  README.md  package.xml
omnimate_description/meshes/: laser_link.STL
omnimate_description/rviz/: omnimate.rviz
omnimate_description/urdf/: common_properties.xacro  omnimate.urdf.xacro  omnimate_drive.urdf.xacro
omnimate_gazebo/: CMakeLists.txt  package.xml
omnimate_laser/: package.xml  setup.cfg  setup.py
omnimate_laser/launch/: laser_Avoidance_a1_X3.launch.py  laser_Tracker_a1_X3.launch.py  laser_Warning_a1_X3.launch.py
omnimate_laser/omnimate_laser/: common.py  laser_Avoidance_4ROS.py  laser_Avoidance_a1_X3.py  laser_Tracker_4ROS.py  laser_Tracker_a1_X3.py  (+1 more)
yahboom_nav/: CMakeLists.txt
yahboom_slam/: CMakeLists.txt  package.xml
(+24 files in other folders)
