<?xml version="1.0"?>
<package format="2">
    <name>yahboom_nav</name>
    <version>1.0.0</version>
    <description>
        Yahboom navigation
    </description>
    <license>Apache 2.0</license>
    <author>Cesar Q</author>
    <maintainer email="cepaquin@espol.edu.ec">Cesar Q</maintainer>

    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>amcl</exec_depend>
    <exec_depend>map_server</exec_depend>
    <exec_depend>dwa_local_planner</exec_depend>
    <exec_depend>move_base</exec_depend>
    <build_export_depend>rospy</build_export_depend>
    <exec_depend>rospy</exec_depend>
</package>
