<?xml version="1.0"?>
<package format="2">
  <name>yahboom_new_description</name>
  <version>1.0.0</version>
  <description>
    3D models of the Yahboom for simulation and visualization
  </description>
  <license>Apache 2.0</license>
  <author email="cepaquin@espol.edu.ec">Cesar Q</author>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>